fixing interest eyes overlapping title on small screens.

--- a/app/assets/stylesheets/mushroom_observer.scss
+++ b/app/assets/stylesheets/mushroom_observer.scss
@@ -443,6 +443,33 @@ a:hover {
     padding-bottom: 5em;
 }
 
+
+//
+// interest eyes
+// --------------------------------------------------
+
+@media (min-width: $screen-sm-min) {
+  .interest-eyes {
+    position: absolute;
+    top: 0;
+  }
+}
+
+@media (min-width: $screen-md-min) {
+  .interest-eyes {
+    position: absolute;
+    top: 0;
+  }
+}
+
+@media (min-width: $screen-lg-min) {
+  .interest-eyes {
+    position: absolute;
+    top: 0;
+  }
+}
+
+
 //
 // alerts
 // --------------------------------------------------
